<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_category" />

        <item
            android:id="@+id/nav_viewpoint"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/text_viewpoints" />
        <item
            android:id="@+id/nav_topics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/text_topics" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Preferences">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/text_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/text_about" />

        </menu>
    </item>

</menu>
