<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/sortColomn"
                android:layout_width="match_parent"
                android:layout_height="28dp">

                <TextView
                    android:id="@+id/textTypeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:text="@string/text_comment_type_date"
                    android:textSize="@dimen/size_text_medium" />

                <TextView
                    android:id="@+id/textTypeHeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:layout_toEndOf="@id/textTypeDate"
                    android:text="@string/text_comment_type_heat"
                    android:textSize="@dimen/size_text_medium" />

                <TextView
                    android:id="@+id/textAscending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:text="@string/text_comment_order_descending"
                    android:textSize="@dimen/size_text_medium" />

                <TextView
                    android:id="@+id/textDescending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@+id/textAscending"
                    android:text="@string/text_comment_order_ascending"
                    android:textSize="@dimen/size_text_medium" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/commentListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textClickToLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/text_click_to_show_more"
                android:textSize="@dimen/size_text_medium" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>