<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardView.Comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CardView.Comment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/topRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textFloor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="New Text"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_anonymous"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="New Text"
                android:textSize="@dimen/size_text_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/textReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_report"
            android:textColor="@color/material_red_500"
            android:textSize="@dimen/size_text_small" />

        <TextView
            android:id="@+id/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/topRow"
            android:text="New Text"
            android:textSize="@dimen/size_text_small" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/interactionRow"
            android:layout_alignParentBottom="false"
            android:text="New Text"
            android:textSize="@dimen/size_text_tiny" />

        <LinearLayout
            android:id="@+id/interactionRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/quoteCard"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/topRow"
                android:text="@string/text_support"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textSupportCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textOppose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_oppose"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textOpposeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reply"
                android:textSize="@dimen/size_text_small" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/quoteCard"
            style="@style/CardView.CommentQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textContent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_quote"
                    android:textSize="@dimen/size_text_small" />

                <TextView
                    android:id="@+id/textQuoteUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/textView8"
                    android:text="New Text"
                    android:textSize="@dimen/size_text_small" />

                <TextView
                    android:id="@+id/textQuoteContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/textView8"
                    android:text="New Text"
                    android:textSize="@dimen/size_text_small" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

</android.support.v7.widget.CardView>